added scroll animation

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <!--  -->
         <div class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch">
           <div class="card small">
-            <img src="/assets/images/product-1.png" alt="Red seat">
+            <img loading="lazy" src="/assets/images/product-1.png" alt="Red seat">
             <div>
               <h3 >red seat</h3>
               <p>the best seat for your living room.</p>
@@ -209,7 +209,7 @@
           </div>
          
           <div class="card wide">
-            <img src="/assets/images/product-3.png" alt="white table">
+            <img loading="lazy" src="/assets/images/product-3.png" alt="white table">
             <div>
               <h3 >white table</h3>
               <p>the best table for your living room.</p>
@@ -221,7 +221,7 @@
       <!--  -->
         <div class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch flex-wrap">
           <div class="card small">
-            <img src="/assets/images/product-2.png" alt="Red seat">
+            <img loading="lazy" src="/assets/images/product-2.png" alt="blue seat">
             <div>
               <h3>blue seat</h3>
               <p>the best seat for your living room.</p>
@@ -231,7 +231,7 @@
          <!--  -->
           
           <div class="card">
-            <img src="/assets/images/product-5.png" alt="white table">
+            <img loading="lazy" src="/assets/images/product-5.png" alt="dark seat">
             <div>
               <h3 >dark seat</h3>
               <p>the best seat for your living room.</p>
@@ -241,7 +241,7 @@
           <!--  -->
 
           <div class="card medium">
-            <img src="/assets/images/product-4.png" alt="white table">
+            <img src="/assets/images/product-4.png" alt="modern bed " loading="lazy">
             <div>
               <h3 >Modern bed</h3>
               <p>the best bed for your living room.</p>
@@ -253,6 +253,7 @@
       <!--  -->
       </div>
 
+      <h4 class="view-more">view more products</h4>
 
     </section>
 
