--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
           <li>
             <a title="main page" href="/index.html">
               <svg
-                class="w-[24px] mx-auto hover:-translate-y-1 active hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
+                class="w-[24px] mx-auto hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
                 data-section="main"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 576 512"
@@ -40,9 +40,9 @@
             </a>
           </li>
           <li>
-            <a title="products page" title href="/products.html">
+            <a title="products page" href="#">
               <svg
-                class="w-[24px] mx-auto hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
+                class="w-[24px] mx-auto active hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
                 data-section="cart"
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 576 512"
@@ -117,86 +117,129 @@
           >
             <li class="item">
               <span>Living room</span>
-              <img
-                src="/assets/icons/living-room.png"
-                alt="living room"
-                class="w-8"
-              />
+              <img src="/assets/icons/living-room.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>office</span>
-              <img src="/assets/icons/office.png" alt="office" class="w-8" />
+              <img src="/assets/icons/office.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>for kids</span>
-              <img
-                src="/assets/icons/for-kids.png"
-                alt="for-kids"
-                class="w-8"
-              />
+              <img src="/assets/icons/for-kids.png" alt="" class="w-8" />
             </li>
             <li class="item">
-              <span>kitchen</span>
-              <img src="/assets/icons/kitchen.png" alt="kitchen" class="w-8" />
+              <span>for kids</span>
+              <img src="/assets/icons/kitchen.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>accesories</span>
-              <img
-                src="/assets/icons/accesories.png"
-                alt="accesories"
-                class="w-8"
-              />
+              <img src="/assets/icons/accesories.png" alt="" class="w-8" />
             </li>
           </ul>
         </div>
       </section>
       <!-- end side menu  -->
-      <!-- home section section  -->
-      <section id="home" class="home h-screen relative">
-        <h1
-          class="home-text uppercase text-[9rem] md:text-[11.5rem] lg:text-[15rem] text-center text-gray-200 font-bold absolute w-full"
+      <!-- products section  -->
+      <section
+        id="products"
+        class="section py-10 pl-14 sm:pr-10 md:px-24 lg:px-32 xl:px-50 bg-section min-h-screen"
+      >
+        <!-- section head  -->
+        <div
+          class="flex justify-between flex-col-reverse sm:flex-row items-center"
         >
-          newest
-        </h1>
-        <div class="relative uppercase text-center pt-24 md:pt-8 ml-11">
-          <h1
-            class="text-[4rem] sm:text-[7rem] md:text-[10rem] text-gray-900 font-thin text-center leading-none"
-          >
-            Olios
-          </h1>
+          <h2 class="title text-[2.5rem]">products</h2>
           <div>
-            <h3
-              class="text-[1.2rem] sm:text-[1.6rem] md:text-[2rem] text-gray-500"
-            >
-              newest furniture shop template
-            </h3>
-            <button
-              type="button"
-              class="mt-10 bg-main text-white uppercase px-4 py-1 rounded-2xl text-sm font-bold"
-            >
-              view more
-            </button>
+            <p class="item uppercase">
+              <span>Living room</span>
+              <img src="/assets/icons/living-room.png" alt="" class="w-8" />
+            </p>
           </div>
         </div>
-        <div class="flex gap-2 absolute bottom-8 right-7">
-          <span
-            class="aspect-square w-2 rounded-full bg-slate-400 cursor-pointer"
-          ></span>
-          <span
-            class="aspect-square w-2 rounded-full active-dot bg-slate-400 cursor-pointer"
-          ></span>
-          <span
-            class="aspect-square w-2 rounded-full bg-slate-400 cursor-pointer"
-          ></span>
-          <span
-            class="aspect-square w-2 rounded-full bg-slate-400 cursor-pointer"
-          ></span>
-          <span
-            class="aspect-square w-2 rounded-full bg-slate-400 cursor-pointer"
-          ></span>
+
+        <!-- section body  -->
+        <div class="colection flex flex-col gap-6 py-10">
+          <!--  -->
+          <div
+            class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch"
+          >
+            <div class="card small">
+              <img
+                loading="lazy"
+                src="/assets/images/product-1.png"
+                alt="Red seat"
+              />
+              <div>
+                <h3>red seat</h3>
+                <p>the best seat for your living room.</p>
+                <span>$45</span>
+              </div>
+            </div>
+
+            <div class="card wide">
+              <img
+                loading="lazy"
+                src="/assets/images/product-3.png"
+                alt="white table"
+              />
+              <div>
+                <h3>white table</h3>
+                <p>the best table for your living room.</p>
+                <span>$320</span>
+              </div>
+            </div>
+          </div>
+          <!--  -->
+          <div
+            class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch flex-wrap"
+          >
+            <div class="card small">
+              <img
+                loading="lazy"
+                src="/assets/images/product-2.png"
+                alt="blue seat"
+              />
+              <div>
+                <h3>blue seat</h3>
+                <p>the best seat for your living room.</p>
+                <span>$35</span>
+              </div>
+            </div>
+            <!--  -->
+
+            <div class="card">
+              <img
+                loading="lazy"
+                src="/assets/images/product-5.png"
+                alt="dark seat"
+              />
+              <div>
+                <h3>dark seat</h3>
+                <p>the best seat for your living room.</p>
+                <span>$90</span>
+              </div>
+            </div>
+            <!--  -->
+
+            <div class="card medium">
+              <img
+                src="/assets/images/product-4.png"
+                alt="modern bed "
+                loading="lazy"
+              />
+              <div>
+                <h3>Modern bed</h3>
+                <p>the best bed for your living room.</p>
+                <span>$520</span>
+              </div>
+            </div>
+          </div>
+          <!--  -->
         </div>
+
+        <h4 class="view-more">view more products</h4>
       </section>
-      <!-- end home section  -->
+      <!-- end porducts section -->
     </main>
 
     <script defer="true" src="js/index.js"></script>
