--- a/products.html
+++ b/products.html
@@ -163,7 +163,7 @@
           <div
             class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch"
           >
-            <div class="card small">
+            <a href="/product.html" class="card small">
               <img
                 loading="lazy"
                 src="/assets/images/product-1.png"
@@ -174,9 +174,9 @@
                 <p>the best seat for your living room.</p>
                 <span>$45</span>
               </div>
-            </div>
+            </a>
 
-            <div class="card wide">
+            <a href="/product.html" class="card wide">
               <img
                 loading="lazy"
                 src="/assets/images/product-3.png"
@@ -187,13 +187,13 @@
                 <p>the best table for your living room.</p>
                 <span>$320</span>
               </div>
-            </div>
+            </a>
           </div>
           <!--  -->
           <div
             class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch flex-wrap"
           >
-            <div class="card small">
+            <a href="/product.html" class="card small">
               <img
                 loading="lazy"
                 src="/assets/images/product-2.png"
@@ -204,10 +204,10 @@
                 <p>the best seat for your living room.</p>
                 <span>$35</span>
               </div>
-            </div>
+            </a>
             <!--  -->
 
-            <div class="card">
+            <a href="/product.html" class="card">
               <img
                 loading="lazy"
                 src="/assets/images/product-5.png"
@@ -218,10 +218,10 @@
                 <p>the best seat for your living room.</p>
                 <span>$90</span>
               </div>
-            </div>
+            </a>
             <!--  -->
 
-            <div class="card medium">
+            <a href="/product.html" class="card medium">
               <img
                 src="/assets/images/product-4.png"
                 alt="modern bed "
@@ -232,7 +232,7 @@
                 <p>the best bed for your living room.</p>
                 <span>$520</span>
               </div>
-            </div>
+            </a>
           </div>
           <!--  -->
         </div>
