--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
         <div>
           <a title="home" href="/index.html">
             <img
-              src="/assets/images/logo.png"
+              src="./assets/images/logo.png"
               class="w-[35px] mx-auto"
               alt="Olios Logo"
               class="w-full"
@@ -117,23 +117,23 @@
           >
             <li class="item">
               <span>Living room</span>
-              <img src="/assets/icons/living-room.png" alt="" class="w-8" />
+              <img src="./assets/icons/living-room.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>office</span>
-              <img src="/assets/icons/office.png" alt="" class="w-8" />
+              <img src="./assets/icons/office.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>for kids</span>
-              <img src="/assets/icons/for-kids.png" alt="" class="w-8" />
+              <img src="./assets/icons/for-kids.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>for kids</span>
-              <img src="/assets/icons/kitchen.png" alt="" class="w-8" />
+              <img src="./assets/icons/kitchen.png" alt="" class="w-8" />
             </li>
             <li class="item">
               <span>accesories</span>
-              <img src="/assets/icons/accesories.png" alt="" class="w-8" />
+              <img src="./assets/icons/accesories.png" alt="" class="w-8" />
             </li>
           </ul>
         </div>
@@ -152,7 +152,7 @@
           <div>
             <p class="item uppercase">
               <span>Living room</span>
-              <img src="/assets/icons/living-room.png" alt="" class="w-8" />
+              <img src="./assets/icons/living-room.png" alt="" class="w-8" />
             </p>
           </div>
         </div>
@@ -166,7 +166,7 @@
             <a href="/product.html" class="card small">
               <img
                 loading="lazy"
-                src="/assets/images/product-1.png"
+                src="./assets/images/product-1.png"
                 alt="Red seat"
               />
               <div>
@@ -179,7 +179,7 @@
             <a href="/product.html" class="card wide">
               <img
                 loading="lazy"
-                src="/assets/images/product-3.png"
+                src="./assets/images/product-3.png"
                 alt="white table"
               />
               <div>
@@ -196,7 +196,7 @@
             <a href="/product.html" class="card small">
               <img
                 loading="lazy"
-                src="/assets/images/product-2.png"
+                src="./assets/images/product-2.png"
                 alt="blue seat"
               />
               <div>
@@ -210,7 +210,7 @@
             <a href="/product.html" class="card">
               <img
                 loading="lazy"
-                src="/assets/images/product-5.png"
+                src="./assets/images/product-5.png"
                 alt="dark seat"
               />
               <div>
@@ -221,9 +221,9 @@
             </a>
             <!--  -->
 
-            <a href="/product.html" class="card medium">
+            <a href="./product.html" class="card medium">
               <img
-                src="/assets/images/product-4.png"
+                src="./assets/images/product-4.png"
                 alt="modern bed "
                 loading="lazy"
               />
