--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
         <div>
           <a title="home" href="/index.html">
             <img
-              src="/assets/images/logo.png"
+              src="./assets/images/logo.png"
               class="w-[35px] mx-auto"
               alt="Olios Logo"
               class="w-full"
@@ -118,31 +118,31 @@
             <li class="item">
               <span>Living room</span>
               <img
-                src="/assets/icons/living-room.png"
+                src="./assets/icons/living-room.png"
                 alt="living room"
                 class="w-8"
               />
             </li>
             <li class="item">
               <span>office</span>
-              <img src="/assets/icons/office.png" alt="office" class="w-8" />
+              <img src="./assets/icons/office.png" alt="office" class="w-8" />
             </li>
             <li class="item">
               <span>for kids</span>
               <img
-                src="/assets/icons/for-kids.png"
+                src="./assets/icons/for-kids.png"
                 alt="for-kids"
                 class="w-8"
               />
             </li>
             <li class="item">
               <span>kitchen</span>
-              <img src="/assets/icons/kitchen.png" alt="kitchen" class="w-8" />
+              <img src="./assets/icons/kitchen.png" alt="kitchen" class="w-8" />
             </li>
             <li class="item">
               <span>accesories</span>
               <img
-                src="/assets/icons/accesories.png"
+                src="./assets/icons/accesories.png"
                 alt="accesories"
                 class="w-8"
               />
@@ -164,19 +164,19 @@
               <div class="flex items-center justify-end gap-1">
                 <span class="likes-number">435</span
                 ><img
-                  src="/assets/icons/heart.svg"
+                  src="./assets/icons/heart.svg"
                   class="w-4 like cursor-pointer hover:scale-110 active:scale-100"
                   alt="heat"
                 />
                 <img
-                  src="/assets/icons/heart-filled.svg"
+                  src="./assets/icons/heart-filled.svg"
                   class="w-4 like hidden cursor-pointer hover:scale-110 active:scale-100"
                   alt="heart-filled"
                 />
               </div>
             </div>
             <img
-              src="/assets/images/product-6.png"
+              src="./assets/images/product-6.png"
               class="w-[80%] mx-auto"
               alt="white seat"
             />
@@ -194,7 +194,7 @@
                   <p class="item uppercase">
                     <span>Living room</span>
                     <img
-                      src="/assets/icons/living-room.png"
+                      src="./assets/icons/living-room.png"
                       alt=""
                       class="w-8"
                     />
@@ -253,7 +253,7 @@
                 <div class="secondary-card">
                   <img
                     loading="lazy"
-                    src="/assets/images/product-1.png"
+                    src="./assets/images/product-1.png"
                     alt="Red seat"
                   />
                   <div>
@@ -264,7 +264,7 @@
                 <div class="secondary-card">
                   <img
                     loading="lazy"
-                    src="/assets/images/product-1.png"
+                    src="./assets/images/product-1.png"
                     alt="Red seat"
                   />
                   <div>
@@ -275,7 +275,7 @@
                 <div class="secondary-card">
                   <img
                     loading="lazy"
-                    src="/assets/images/product-2.png"
+                    src="./assets/images/product-2.png"
                     alt="Red seat"
                   />
                   <div>
@@ -286,7 +286,7 @@
                 <div class="secondary-card">
                   <img
                     loading="lazy"
-                    src="/assets/images/product-3.png"
+                    src="./assets/images/product-3.png"
                     alt="Red seat"
                   />
                   <div>
