--- a/search.html
+++ b/search.html
@@ -17,7 +17,7 @@
         <div>
           <a title="home" href="/index.html">
             <img
-              src="/assets/images/logo.png"
+              src="./assets/images/logo.png"
               class="w-[35px] mx-auto"
               alt="Olios Logo"
               class="w-full"
@@ -118,31 +118,31 @@
             <li class="item">
               <span>Living room</span>
               <img
-                src="/assets/icons/living-room.png"
+                src="./assets/icons/living-room.png"
                 alt="living-room"
                 class="w-8"
               />
             </li>
             <li class="item">
               <span>office</span>
-              <img src="/assets/icons/office.png" alt="office" class="w-8" />
+              <img src="./assets/icons/office.png" alt="office" class="w-8" />
             </li>
             <li class="item">
               <span>for kids</span>
               <img
-                src="/assets/icons/for-kids.png"
+                src="./assets/icons/for-kids.png"
                 alt="for kids"
                 class="w-8"
               />
             </li>
             <li class="item">
               <span>kitchen</span>
-              <img src="/assets/icons/kitchen.png" alt="Kitchen" class="w-8" />
+              <img src="./assets/icons/kitchen.png" alt="Kitchen" class="w-8" />
             </li>
             <li class="item">
               <span>accesories</span>
               <img
-                src="/assets/icons/accesories.png"
+                src="./assets/icons/accesories.png"
                 alt="accesories"
                 class="w-8"
               />
@@ -174,15 +174,15 @@
           </div>
           <div id="results" class="grid mt-20">
             <div class="search-card">
-              <img src="/assets/images/product-1.png" alt="seat" />
+              <img src="./assets/images/product-1.png" alt="seat" />
               <h3>read seat</h3>
             </div>
             <div class="search-card">
-              <img src="/assets/images/product-5.png" alt="seat" />
+              <img src="./assets/images/product-5.png" alt="seat" />
               <h3>black seat</h3>
             </div>
             <div class="search-card">
-              <img src="/assets/images/product-6.png" alt="seat" />
+              <img src="./assets/images/product-6.png" alt="seat" />
               <h3>white seat</h3>
             </div>
           </div>
