--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
         class="side-bar fixed bg-white shadow-lg left-0 top-0 bottom-0 w-12 sm:w-16 h-screen py-5 flex flex-col justify-between z-50"
       >
         <div>
-          <a title="home" href="/index.html">
+          <a title="home" href="/">
             <img
               src="./assets/images/logo.png"
               class="w-[35px] mx-auto"
@@ -26,7 +26,7 @@
         </div>
         <ul class="flex flex-col gap-4 basis-2/3">
           <li>
-            <a title="main page" href="/index.html">
+            <a title="main page" href="/">
               <svg
                 class="w-[24px] mx-auto hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
                 data-section="main"
@@ -54,7 +54,7 @@
             </a>
           </li>
           <li>
-            <a title="search" href="/search.html">
+            <a title="search" href="/Olios/search">
               <svg
                 class="w-[24px] mx-auto hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
                 data-section="search"
@@ -163,7 +163,7 @@
           <div
             class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch"
           >
-            <a href="/product.html" class="card small">
+            <a href="/Olios/product" class="card small">
               <img
                 loading="lazy"
                 src="./assets/images/product-1.png"
@@ -176,7 +176,7 @@
               </div>
             </a>
 
-            <a href="/product.html" class="card wide">
+            <a href="/Olios/product" class="card wide">
               <img
                 loading="lazy"
                 src="./assets/images/product-3.png"
@@ -193,7 +193,7 @@
           <div
             class="flex flex-col justify-center sm:flex-row gap-6 items-center sm:items-stretch flex-wrap"
           >
-            <a href="/product.html" class="card small">
+            <a href="/Olios/product" class="card small">
               <img
                 loading="lazy"
                 src="./assets/images/product-2.png"
@@ -207,7 +207,7 @@
             </a>
             <!--  -->
 
-            <a href="/product.html" class="card">
+            <a href="/Olios/product" class="card">
               <img
                 loading="lazy"
                 src="./assets/images/product-5.png"
@@ -221,7 +221,7 @@
             </a>
             <!--  -->
 
-            <a href="./product.html" class="card medium">
+            <a href="./Olios/product" class="card medium">
               <img
                 src="./assets/images/product-4.png"
                 alt="modern bed "
