--- a/search.html
+++ b/search.html
@@ -15,7 +15,7 @@
         class="side-bar fixed bg-white shadow-lg left-0 top-0 bottom-0 w-12 sm:w-16 h-screen py-5 flex flex-col justify-between z-50"
       >
         <div>
-          <a title="home" href="/index.html">
+          <a title="home" href="/">
             <img
               src="./assets/images/logo.png"
               class="w-[35px] mx-auto"
@@ -26,7 +26,7 @@
         </div>
         <ul class="flex flex-col gap-4 basis-2/3">
           <li>
-            <a title="main page" href="/index.html">
+            <a title="main page" href="/">
               <svg
                 class="w-[24px] mx-auto hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
                 data-section="main"
@@ -40,7 +40,7 @@
             </a>
           </li>
           <li>
-            <a title="products page" title href="/products.html">
+            <a title="products page" title href="/Olios/products">
               <svg
                 class="w-[24px] mx-auto hover:-translate-y-1 hover:fill-main fill-gray-400 cursor-pointer transition-all duration-300"
                 data-section="cart"
